examples/invalid/62_alias_type_kind_expected.lane
module Examples.Invalid.AliasTypeKindExpected

type Bad : Type = type[A] => A
